cmake_minimum_required(VERSION 3.22.0)

remove_definitions(-DCRA_BUILD_DLL)

set(LIBS ${PROJECT_NAME} mem_detect_config)

add_executable(test_atomic test_atomic.c)
target_link_libraries(test_atomic ${LIBS})
add_executable(test_collects test_collects.c)
target_link_libraries(test_collects ${LIBS})
add_executable(test_alist test_alist.c)
target_link_libraries(test_alist ${LIBS})
add_executable(test_llist test_llist.c)
target_link_libraries(test_llist ${LIBS})
add_executable(test_deque test_deque.c)
target_link_libraries(test_deque ${LIBS})
add_executable(test_dict test_dict.c)
target_link_libraries(test_dict ${LIBS})
add_executable(test_bin_ser test_bin_ser.c)
target_link_libraries(test_bin_ser ${LIBS})
add_executable(test_json test_json.c)
target_link_libraries(test_json ${LIBS})
add_executable(test_thread test_thread.c)
target_link_libraries(test_thread ${LIBS})
add_executable(test_thrpool test_thrpool.c)
target_link_libraries(test_thrpool ${LIBS})
add_executable(test_log test_log.c)
target_link_libraries(test_log ${LIBS})
add_executable(test_buffer test_buffer.c)
target_link_libraries(test_buffer ${LIBS})
add_executable(test_mempool test_mempool.c)
target_link_libraries(test_mempool ${LIBS})
add_executable(test_refcnt test_refcnt.c)
target_link_libraries(test_refcnt ${LIBS})
add_executable(test_timewheel test_timewheel.c)
target_link_libraries(test_timewheel ${LIBS})
add_executable(test_malloc test_malloc.c)
target_link_libraries(test_malloc ${LIBS})
add_executable(test_assert test_assert.c)
target_link_libraries(test_assert ${LIBS})
add_executable(test_defs test_defs.c)
target_link_libraries(test_defs ${LIBS})
add_executable(test_mainarg test_mainarg.c)
target_link_libraries(test_mainarg ${LIBS})

add_executable(collections_performance collections_performance.c)
target_link_libraries(collections_performance ${LIBS})

add_test(test_atomic test_atomic)
add_test(test_collects test_collects)
add_test(test_alist test_alist)
add_test(test_llist test_llist)
add_test(test_deque test_deque)
add_test(test_dict test_dict)
add_test(test_bin_ser test_bin_ser)
add_test(test_json test_json)
add_test(test_thread test_thread)
add_test(test_thrpool test_thrpool)
add_test(test_log test_log)
add_test(test_buffer test_buffer)
add_test(test_mempool test_mempool)
add_test(test_refcnt test_refcnt)
add_test(test_timewheel test_timewheel)
add_test(test_malloc test_malloc)
# add_test(test_assert test_assert)
add_test(test_defs test_defs)
add_test(test_mainarg test_mainarg)
